<?xml version="1.0"?>
<package>
  <description>
    RViz Plugin for executing trajectories on the DRC-Hubo.
  </description>

  <name>hubo_planning_panel</name>
  <version>1.0.0</version>

  <maintainer email="ajm2217@columbia.edu">Anton Mayr</maintainer>

  <license>BSD</license>

  <author email="ajm2217@columbia.edu">Anton Mayr</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rviz</run_depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>

</package>
